--- a/README
+++ b/README
@@ -18,6 +18,7 @@ Features:
 
 - Encode text into a QR Code with a single click
 - The text can be taken from the current selection or clipboard
+- Save the QR code as image file by clicking on it
 
 
 Requirements
@@ -31,7 +32,7 @@ Compile and install
 
 mkdir build
 cd build
-cmake .. -DCMAKE_INSTALL_PREFIX=/usr
+cmake -DCMAKE_INSTALL_PREFIX=`kde4-config --prefix` ..
 make
 sudo make install
 kbuildsyscoca4
